<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkslategray"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imvLogoName"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoname_color" />

    <LinearLayout
        android:id="@+id/SignUpCard"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/royalblue"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406">

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/infocard"
            android:drawableStart="@drawable/emailsize"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/infocard"
            android:drawableStart="@drawable/passwordsize"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLoginhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ForgotPass"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/roundstyle"
            android:paddingStart="40dp"
            android:paddingEnd="50dp"
            android:text="@string/Google"
            android:textAlignment="center"
            app:backgroundTint="@color/darkslategray"
            app:icon="@drawable/googlesize"
            app:iconTint="@color/royalblue" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/royalblue"
        android:text="@string/Login"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAccount"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/roundstyle"
        android:text="@string/Exit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAccount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/Account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:buttonTint="@color/white"
        android:text="@string/Remember"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpCard" />

</androidx.constraintlayout.widget.ConstraintLayout>