<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkslategray"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imvLogoName2"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoname_color" />

    <LinearLayout
        android:id="@+id/SignUpCard"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/royalblue"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406">

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/txtSignUser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/infocard"
            android:drawableStart="@drawable/usersize"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/User"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtSignEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/infocard"
            android:drawableStart="@drawable/emailsize"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtSignPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/infocard"
            android:drawableStart="@drawable/passwordsize"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLoginhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/LoginHere"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbxTermOfServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/white"
        android:text="@string/Services"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpCard"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/roundstyle"
        android:text="@string/Sign"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>