<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkslategray"
    tools:context=".SettingsActivity">

    <TableRow
        android:id="@+id/trwUpperMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/royalblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/back"
            tools:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/settings"
            tools:srcCompat="@drawable/settings" />

        <ImageView
            android:id="@+id/imgFiller"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:clickable="false" />

    </TableRow>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trwUpperMenu">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/night"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/Night"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:thumb="@drawable/mythumb"
            app:track="@drawable/mytrack"
            tools:checked="true" />

        <View
            android:id="@+id/divider01"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/autospell"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/Auto"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:thumb="@drawable/mythumb"
            app:track="@drawable/mytrack"
            tools:checked="false" />

        <View
            android:id="@+id/divider02"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txtLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/Language"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/language" />

        <View
            android:id="@+id/divider03"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/Rate"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/star" />

        <View
            android:id="@+id/divider04"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txtContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/Contact"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/contact" />

        <View
            android:id="@+id/divider05"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txtShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/Share"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/share" />

        <View
            android:id="@+id/divider06"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgKofi"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="184dp"
        android:contentDescription="@string/Kofi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kofi"
        tools:srcCompat="@drawable/kofi" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/royalblue"
        android:onClick="logout"
        android:text="@string/Logout"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>